[tool.poetry]
name = "FedMedImaging"
version = "0.1.0"
description = "Federated learning with different models and strategies"
authors = [""]


[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.0"
flwr = "^1.0"
numpy = "^1.18.5"
keras = "^2.4.3"
pathlib = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
